-----------
v5.0.24-git
-----------



-------
v5.0.23
-------

[mjr] Only ask for the count of matching contacts when determining to use
      browser vs ajax autocompletion.
[jan] Fix closing the compose window after redirecting (Bug #11259).
[jan] Display correct values in permission-denied error messages (Bug #11253).


-------
v5.0.22
-------

[mms] SECURITY: Only allow display of basic image types directly in browser.
[jan] Update Turkish translation (İstanbul Technical University).
[jan] Re-add option to report messages as spam/ham through redirection.
[jan] Update Swedish translation (Jakob Alvermark
      <jakob.alvermark@bsdlabs.com>).


-------
v5.0.21
-------

[mms] SECURITY: Fix XSS vulnerabilities on the dynamic compose page and the
      minimal mailbox and message pages.
[jan] Re-add leading paragraph before HTML signatures to avoid writing into
      the signature.
[jan] Use preferred editor if not opening compose window from dynamic view.
[jan] Update Italian translation (Emilien <emilien@wifi.e4a.it>).
[mms] Save Bcc addresses when saving compose message as draft.
[mms] Fix handling of RETURN keypress in the Subject input on the dynamic
      compose page.
[jan] Fix regression in sending PGP encrypted messages (Bug #11150).
[jan] Update Slovak translation (Marika Schvarczova
      <schvarczova.marika@domeny.sk>).
[jan] Update Czech translation (Michal Foist <michal@foist.cz>).


-------
v5.0.20
-------

[mms] Added the 'delhide_trash' preference.
[jan] Update Hungarian translation (Zoltán Németh <nemeth.zoltan@etit.hu>).
[mms] Ensure that PGP & S/MIME signed message bodies are not altered after the
      signature is calculated (Bug #11058).
[mms] Fix internal storage of date searches (Bug #11109).
[mms] Fix regression in sending PGP encrypted messages (Bug #11085).
[mms] Only poll mailboxes in dynamic view that exist in the browser folder
      tree.
[mms] Fix regression in displaying From address on mailbox page in traditional
      view.