@@ -2,6 +2,7 @@
 v5.0.24-git
 -----------
 
+[mms] Fix spam reporting in minimal view.
 
 
 -------
